--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap");
 :root {
   --themeColor1: darkslateblue;
-  --themeColor2: black;
+  --themeColor2: grey;
 }
 html {
   scroll-behavior: smooth;
@@ -13,9 +13,7 @@ html {
   text-decoration: none;
 }
 .max-width {
-  max-width: 1400px;
-  padding: 0 50px;
-  margin: auto;
+  padding: 0 30px;
 }
 
 /* header styling */
@@ -23,7 +21,6 @@ header {
   background-color: var(--themeColor2);
   color: white;
   font-size: 18px;
-
   font-family: "Montserrat", sans-serif;
   display: flex;
   align-items: center;
@@ -31,7 +28,7 @@ header {
 }
 header .icons i {
   font-size: 24px;
-  padding: 15px 20px;
+  padding: 10px 20px;
   border-left: 1px solid white;
 }
 header .icons i:hover {
@@ -40,31 +37,24 @@ header .icons i:hover {
 }
 /* navbar styling */
 .navbar {
-  position: fixed;
   width: 100%;
   z-index: 999;
   padding: 15px 0;
-  border-bottom: 3px solid var(--themeColor1);
+  background-color: var(--themeColor1);
+  color: white;
   font-family: "Montserrat", sans-serif;
   transition: all 0.3s ease;
 }
 
-.navbar .max-width {
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 30px;
 }
-.navbar .logo a {
-  color: var(--themeColor2);
-  font-size: 35px;
-  font-weight: 600;
-}
-.navbar .logo a span {
-  color: var(--themeColor1);
-  transition: all 0.3s ease;
-}
-.navbar.anchorTop .logo a span {
-  color: white;
+
+.navbar .menu {
+  margin: 15px 0;
 }
 .navbar .menu li {
   list-style: none;
@@ -72,18 +62,14 @@ header .icons i:hover {
 }
 .navbar .menu li a {
   display: block;
-  color: var(--themeColor2);
   font-size: 18px;
-  font-weight: 500;
-  padding: 15px;
+  font-weight: 600;
+  padding: 10px;
+  border-radius: 5px;
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  background-color: var(--themeColor1);
-  color: white;
-}
-.navbar.anchorTop .menu li a:hover {
-  color: white;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 /* menu btn styling */
@@ -93,37 +79,13 @@ header .icons i:hover {
   cursor: pointer;
   display: none;
 }
-.scroll-up-btn {
-  position: fixed;
-  height: 45px;
-  width: 42px;
-  background: var(--themeColor1);
-  right: 30px;
-  bottom: 30px;
-  text-align: center;
-  line-height: 45px;
-  color: white;
-  z-index: 9999;
-  font-size: 30px;
-  border-radius: 6px;
-  cursor: pointer;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-.scroll-up-btn.show {
-  bottom: 30px;
-  opacity: 1;
-  pointer-events: auto;
-}
 
 /* home section styling */
 .home {
   display: flex;
   background: url("img/welcome1.jpg") no-repeat center;
-  height: 55vh;
-  color: var(--themeColor2);
-  min-height: 500px;
+  height: 100vh;
+  color: black;
   background-size: cover;
   /* background-attachment: fixed; */
   font-family: "Montserrat", sans-serif;
@@ -138,8 +100,8 @@ header .icons i:hover {
   font-size: 60px;
   font-weight: 600;
 }
-.home .home-content .text-2 .span {
-  color: white;
+.home .home-content .text-2 span {
+  color: var(--themeColor1);
 }
 .home .home-content .text-3 {
   font-size: 35px;
@@ -147,8 +109,9 @@ header .icons i:hover {
 }
 .home .home-content .text-3 span {
   color: var(--themeColor1);
+  font-weight: bolder;
 }
-.home .home-content a {
+.home .home-content a,button{
   display: inline-block;
   background: var(--themeColor1);
   color: white;
@@ -159,386 +122,16 @@ header .icons i:hover {
   border: 2px solid var(--themeColor1);
   transition: all 0.3s ease;
 }
-.home .home-content a:hover {
+.home .home-content a:hover,button:hover {
   color: var(--themeColor1);
   background: none;
 }
 
 /* common styling for all sections*/
-section {
-  padding: 90px 0;
-  /* height: 100vh; */
-  font-family: "Roboto", sans-serif;
-}
-.about .about-content,
-.services .serv-content,
-.skills .skills-content {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-section .title {
-  position: relative;
-  text-align: center;
-  font-size: 40px;
-  font-weight: 500;
-  margin-bottom: 30px;
-  padding-bottom: 20px;
-  font-family: "Montserrat", sans-serif;
-}
-section .title:hover::before {
-  opacity: 1;
-}
-section .title::before {
-  content: "";
-  position: absolute;
-  width: 200px;
-  height: 3px;
-  background: black;
-  bottom: 0px;
-  left: 50%;
-  opacity: 0;
-  transform: translateX(-50%);
-  transition: all 1s ease-in-out;
-}
-section .title:hover::after {
-  opacity: 1;
-}
-section .title::after {
-  position: absolute;
-  font-size: 20px;
-  font-weight: 700;
-  padding: 0 5px;
-  bottom: -8px;
-  color: var(--themeColor1);
-  background: white;
-  left: 50%;
-  opacity: 0;
-  transform: translateX(-50%);
-  transition: all 0.3s ease-in-out;
-}
-
-/* about section styling */
-.about .title::after {
-  content: "who i am";
-}
-.about .about-content .left {
-  width: 45%;
-}
-.about .about-content .left img {
-  height: 400px;
-  width: 400px;
-  object-fit: cover;
-  border-radius: 30px;
-}
-.about .about-content .right {
-  width: 55%;
-}
-.about .about-content .right .text {
-  font-size: 25px;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-.about .about-content .right .text span {
-  color: var(--themeColor1);
-}
-.about .about-content .right p {
-  text-align: justify;
-}
-.about .about-content .right a {
-  display: inline-block;
-  background: var(--themeColor1);
-  color: white;
-  padding: 5px 20px;
-  font-size: 18px;
-  margin-top: 20px;
-  border-radius: 8px;
-  border: 2px solid var(--themeColor1);
-  transition: all 0.3s ease;
-}
-.about .about-content .right a:hover {
-  color: var(--themeColor1);
-  background: none;
-}
-
-/* services section styling */
-.services {
-  color: white;
-  background: #222;
-}
-.services .title::before {
-  background: white;
-}
-.services .title::after {
-  background: #222;
-  content: "what i provide";
-}
-.services .serv-content .card {
-  width: calc(33% - 20px);
-  background: #444;
-  text-align: center;
-  border-radius: 8px;
-  padding: 20px 25px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.services .serv-content .card:hover {
-  background: var(--themeColor1);
-}
-.services .serv-content .card .box {
-  transition: all 0.3s ease;
-}
-.services .serv-content .card:hover .box {
-  transform: scale(1.05);
-}
-.services .serv-content .card i {
-  font-size: 50px;
-  color: var(--themeColor1);
-  transition: color 0.3s ease;
-}
-.services .serv-content .card .text {
-  font-size: 25px;
-  font-weight: 500;
-  margin: 10px 0 8px 0;
-}
-.services .serv-content .card:hover i {
-  color: white;
-}
-
-/* skills section styling */
-.skills .title::after {
-  content: "what i know";
-}
-.skills .skills-content .column {
-  width: calc(50% - 30px);
-}
-.skills .skills-content .left .text {
-  font-size: 20px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-.skills .skills-content .left p {
-  text-align: justify;
-}
-.skills .skills-content .left a {
-  display: inline-block;
-  background: var(--themeColor1);
-  color: white;
-  padding: 5px 20px;
-  font-size: 18px;
-  margin-top: 20px;
-  border-radius: 8px;
-  border: 2px solid var(--themeColor1);
-  transition: all 0.3s ease;
-}
-.skills .skills-content .left a:hover {
-  color: var(--themeColor1);
-  background: none;
-}
-.skills .skills-content .right .bars {
-  margin-bottom: 15px;
-}
-.skills .skills-content .bars .info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.skills .skills-content .bars span {
-  font-size: 20px;
-  font-weight: 500;
-}
-.skills .skills-content .bars .line {
-  height: 5px;
-  width: 100%;
-  background: lightgrey;
-  position: relative;
-}
-.skills .skills-content .bars .line::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: var(--themeColor1);
-}
-.skills .skills-content .bars .html::before {
-  width: 70%;
-}
-.skills .skills-content .bars .css::before {
-  width: 50%;
-}
-.skills .skills-content .bars .js::before {
-  width: 60%;
-}
-.skills .skills-content .bars .node::before {
-  width: 20%;
-}
-.skills .skills-content .bars .mysql::before {
-  width: 10%;
-}
-
-/* projects section styling */
-.projects {
-  color: white;
-  background: #222;
-}
-.projects .title::before {
-  background: white;
-}
-.projects .title::after {
-  background: #222;
-  content: "what to show";
-}
-.projects .box {
-  width: 340px;
-  height: 300px;
-  background: #444;
-  text-align: center;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.projects .box:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 0px 8px pink;
-}
-
-.projects .box .project-header {
-  font-size: 24px;
-  font-weight: 500;
-  padding: 10px 0;
-}
-.projects .box img {
-  height: 200px;
-  width: 340px;
-  margin-bottom: 10px;
-}
-.projects .box .links {
-  background: var(--themeColor1);
-  color: white;
-  margin: 0 30px;
-  padding: 3px 20px;
-  font-size: 20px;
-  border-radius: 8px;
-  border: 2px solid var(--themeColor1);
-  transition: all 0.3s ease;
-}
-.projects .box .links:hover {
-  color: var(--themeColor1);
-  background: white;
-}
-.owl-dots {
-  text-align: center;
-  margin-top: 20px;
-}
-.owl-dot {
-  height: 13px;
-  width: 13px;
-  margin: 0 10px;
-  outline: none !important;
-  border-radius: 50%;
-  border: 2px solid var(--themeColor1) !important;
-  transition: all 0.3s ease;
-}
-.owl-dot.active {
-  width: 35px;
-  border-radius: 14px;
-}
-.owl-dot.active,
-.owl-dot:hover {
-  background: var(--themeColor1) !important;
-}
-
-/* contact section styling */
-.contact .contact-content {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-.contact .title::after {
-  content: "get in touch";
-}
-.contact .contact-content .left {
-  width: 47%;
-}
-.contact .contact-content .right {
-  width: 47%;
-}
-.contact .contact-content .text {
-  font-size: 24px;
-  font-weight: 500;
-  padding: 10px 0;
-}
-.contact .contact-content .left p {
-  text-align: justify;
-  margin-bottom: 20px;
-}
-.contact .contact-content .left .icons {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.contact .contact-content .left .icons .row {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.contact .contact-content .left .icons i {
-  font-size: 40px;
-  color: var(--themeColor1);
-  margin-right: 20px;
-}
-.contact .contact-content .left .icons .info {
-  font-size: 15px;
-}
-.contact .contact-content .info .myDetail {
-  color: #333;
-  font-weight: lighter;
-}
-.contact .contact-form {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.contact .contact-form input,
-.contact .contact-form .messageArea {
-  font-size: 20px;
-  padding: 5px 8px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  border: 0.5px solid grey;
-}
-.contact .contact-form .half {
-  width: 49%;
-}
-.contact .contact-form .full {
-  width: 100%;
-}
-.contact .contact-form .messageArea {
-  width: 100%;
-  resize: none;
-}
-.contact .contact-form .send-msg {
-  display: inline-block;
-  background: var(--themeColor1);
-  color: white;
-  padding: 5px 20px;
-  font-size: 18px;
-  border-radius: 8px;
-  border: 2px solid var(--themeColor1);
-  transition: all 0.3s ease;
-}
-.contact .contact-form .send-msg:hover {
-  color: var(--themeColor1);
-  background: none;
-  cursor: pointer;
-}
 
 /* footer styling */
 footer {
-  background-color: #222;
+  background-color: var(--themeColor2);
   color: white;
   text-align: center;
   font-size: 18px;
@@ -604,7 +197,7 @@ footer {
   .home .home-content .text-3 {
     font-size: 35px;
   }
-  .home .home-content a {
+  .home .home-content a,button {
     font-size: 23px;
     padding: 10px 30px;
   }
@@ -644,7 +237,7 @@ footer {
   .home .home-content .text-3 {
     font-size: 32px;
   }
-  .home .home-content a {
+  .home .home-content a,button {
     font-size: 20px;
   }
   .services .serv-content .card {
