--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each users as |user| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
+    <h2>{{user.first_name}}</h2>
   </div>
   <div class="col-md-6">
     <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
