--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,4 +62,7 @@
     </footer>
   </body>
       <script src="/assets/scripts/script.js"></script>
+          {{#if logged_in}}
+    <script src="/assets/scripts/logout.js"></script>
+    {{/if}}
 </html>
