--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,31 @@
-
+<header class="header">
+      
+        <div class="text">
+          some text here
+        </div>
+        <ul class="menu">
+          <li><a href="#" class="menu-btn">Home</a></li>
+          <li><a href="#" class="menu-btn">About</a></li>
+          <li><a href="#" class="menu-btn">Guide</a></li>
+          <li><a href="#" class="menu-btn">Account</a></li>
+          <li><a href="https://legislation.nsw.gov.au/view/whole/html/inforce/current/act-2006-080" target="_blank" ="menu-btn">Legal</a></li>
+          <li><a href="#" class="menu-btn">Testimonials</a></li>
+          
+        </ul>
+        
+      
+    </header>
     
     <!-- home section start -->
     <section class="home" id="home">
       <div class="max-width">
         <div class="home-content">
           <div class="text-1">Welcome to</div>
-          <div class="text-2">Thy<span>Will</span></div>
-          <div class="text-3">A Popular Will Generator</div>
-          <div class="text-3">We are <span class="typing"></span></div>
+          <div class="logo">Thy<span>Will</span></div>
+          <div class="text-2">An Easy Will Generator</div>
+          <div class="text-2">We are <span class="typing"></span></div>
           <div>
-            <a href="#"><i class="fas fa-pen-fancy"></i> Get Started</a>
+            <button id="startBtn"><i class="fas fa-pen-fancy"></i> Get Started</button>
             <button id="modalBtn" data-toggle="modal" data-target="#loginModal"><i class="fas fa-sign-in-alt"></i></i> Login</button>
           </div>  
         </div>
