--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,58 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thy Will HomePage</title>
+    <title>Thy Will</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="/assets/styles/style.css" />
   </head>
   <body>
-        <header>
-      <div class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing.
-      </div>
-      <div class="icons">
-        <i class="fas fa-envelope-square"></i>
-        <i class="fas fa-download"></i>
-        <i class="fab fa-facebook-square"></i>
-        <i class="fas fa-share-alt-square"></i>
-      </div>
-    </header>
-
-    
-    <nav class="navbar">
-      
-        <div class="text">
-          Lorem.
-        </div>
-        <ul class="menu">
-          <li><a href="#" class="menu-btn">Home</a></li>
-          <li><a href="#" class="menu-btn">About</a></li>
-          <li><a href="#" class="menu-btn">Guide</a></li>
-          <li><a href="#" class="menu-btn">Account</a></li>
-          <li><a href="#" class="menu-btn">Legal</a></li>
-          <li><a href="#" class="menu-btn">Testimonials</a></li>
-          {{#if logged_in}}
-          <li><a href="#" class="menu-btn" id="logout">Logout</a></li>
-          {{/if}}
-        </ul>
-        <div class="menu-btn">
-          <i class="fas fa-bars"></i>
-        </div>
-      
-    </nav>
-
     <main>
-      
-    {{{body}}}
+      {{{body}}}
     </main>
-    
     <!-- footer section start -->
     <footer>
       <span>Created By lorem | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
