--- a/views/userPage.handlebars
+++ b/views/userPage.handlebars
@@ -11,7 +11,7 @@
     </li>
     <li><a href="#">My Will</a></li>
     {{#if logged_in}}
-    <li><a href="#" class="menu-btn" id="logout">Logout</a></li>
+    <li><a href="/" id="logout">Logout</a></li>
     {{/if}}
   </ul>
 </header>
