carousel issue resolved

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -41,7 +41,8 @@
   <h2 class="title">Your Will is <span class="status">in Progress</span></h2>
 
   <div class="box-2">
-    <div class="max-width carousel owl-carousel">
+    <div class="max-width">
+    <div class="carousel owl-carousel">
 
       <div class="card" id="part-1">
         <h2 class="order">No.1</h2>
@@ -61,7 +62,8 @@
         <h5>The one to execute your wishes</h5>
         <button>Start</button>
       </div>
-
-      
+    </div>
     </div>
   </div>
+
+  <script src="/assets/scripts/carousel.js"></script>
