--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -35,6 +35,11 @@ button {
   border-radius: 8px;
   transition: all 0.3s ease;
 }
+button:hover {
+  color: var(--themeColor1);
+  border: 1px solid var(--themeColor1);
+  background-color: var(--themeColor2);
+}
 .header {
   display: flex;
   align-items: center;
@@ -113,11 +118,7 @@ footer {
   border-radius: 8px;
   transition: all 0.3s ease;
 }
-.home .home-content button:hover {
-  color: var(--themeColor1);
-  border: 2px solid var(--themeColor1);
-  background-color: var(--themeColor2);
-}
+
 
 /* ======================  User page styling ====================== */
 .dropdown {
@@ -185,26 +186,60 @@ footer {
   font-size: 25px;
   font-weight: 600;
 }
-.box-2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.box-2 .card {
-  width: 200px;
+
+.box-2 .card{
+  width: 300px;
+  height: 300px;
   padding: 15px;
+  border-radius: 8px;
+  text-align: center;
   background-color: var(--themeColor3);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.box-2 .card:hover{
+  transform: scale(1.05);
+  box-shadow: 0px 0px 8px pink;
+}
+.box-2 .card .order{
+  font-size: 24px;
+  font-weight: 500;
+  padding: 10px 0;
+  border: 1px dashed cadetblue;
+}
+
+.owl-dots{
+  text-align: center;
+  margin-top: 20px;
+}
+.owl-dot{
+  height: 13px;
+  width: 13px;
+  margin: 0 10px;
+  outline: none!important;
+  border-radius: 50%;
+  border: 2px solid var(--themeColor1)!important;
+  transition: all 0.3s ease;
+}
+.owl-dot.active{
+  width: 35px;
+  border-radius: 14px;
+}
+.owl-dot.active,
+.owl-dot:hover{
+  background: var(--themeColor1)!important;
+}
+
+.carousel{
+  max-width: 1500px;
 }
 
 /* ======================  OwlCarousel styling ====================== */
-.carousel {
+/* .carousel {
   color: black;
   background: green;
 }
-.carousel .max-width {
-  background: red;
-  max-width: 1000px;
-}
+
 .carousel .box {
   width: 340px;
   height: 300px;
@@ -263,13 +298,5 @@ footer {
 .owl-dot.active,
 .owl-dot:hover {
   background: var(--themeColor1) !important;
-}
+} */
 
-.box-2l {
-  margin-right: 30px;
-}
-.box-2r i {
-  padding-right: 10px;
-  font-size: 25px;
-  color: var(--themeColor1);
-}
