--- a/views/layouts/main-1.handlebars
+++ b/views/layouts/main-1.handlebars
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="/assets/styles/style.css" />
@@ -24,7 +22,7 @@
       <span>Created By lorem | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
   </body>
-    <script src="/assets/scripts/typing.js"></script>
+    <script src="/assets/scripts/carousel.js"></script>
     {{#if logged_in}}
     <script src="/assets/scripts/logout.js"></script>
     {{/if}}
