welcome and profile page draft version ready

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -42,27 +42,45 @@
 
   <div class="box-2">
     <div class="max-width">
-    <div class="carousel owl-carousel">
+      <div class="carousel owl-carousel">
 
-      <div class="card" id="part-1">
-        <h2 class="order">No.1</h2>
-        <h4>Benificiaries</h4>
-        <h5>Individuals entitled to inherit money or property from this will owner.</h5>
-        <button>Start</button>
+        <div class="card" id="part-1">
+          <h2 class="order">No.1</h2>
+          <h4>Benificiaries</h4>
+          <h5>Individuals entitled to inherit money or property from this will owner.</h5>
+          <button>Start</button>
+        </div>
+        <div class="card" id="part-2">
+          <h2 class="order">No.2</h2>
+          <h4>Executors</h4>
+          <h5>The one to execute your wishes.</h5>
+          <button>Start</button>
+        </div>
+        <div class="card" id="part-3">
+          <h2 class="order">No.3</h2>
+          <h4>Asset</h4>
+          <h5>A quick list of your major Assets.</h5>
+          <button>Start</button>
+        </div>
+        <div class="card" id="part-4">
+          <h2 class="order">No.4</h2>
+          <h4>AssetApportion</h4>
+          <h5>Set up percentages for each benificiary.</h5>
+          <button>Start</button>
+        </div>
+        <div class="card" id="part-5">
+          <h2 class="order">No.5</h2>
+          <h4>Witness</h4>
+          <h5>Basic info of your nominated Witness</h5>
+          <button>Start</button>
+        </div>
+        <div class="card" id="part-6">
+          <h2 class="order">No.6</h2>
+          <h4>Guardians</h4>
+          <h5>Who should looks after your Benificiaries.</h5>
+          <button>Start</button>
+        </div>
       </div>
-      <div class="card" id="part-2">
-        <h2 class="order">No.2</h2>
-        <h4>Guardians</h4>
-        <h5>Who should looks after your Benificiaries.</h5>
-        <button>Start</button>
-      </div>
-      <div class="card" id="part-3">
-        <h2 class="order">No.3</h2>
-        <h4>Executors</h4>
-        <h5>The one to execute your wishes</h5>
-        <button>Start</button>
-      </div>
-    </div>
     </div>
   </div>
 
