--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,7 +9,7 @@
         <button><i class="fas fa-share-alt-square"> Share</i></button>
       </div>
     </li>
-    <li><a href="#">My Will</a></li>
+    <li><a href="/api/pdf/{{id}}" target="_blank">Preview</a></li>
     <li><a href="/" id="logout">Logout</a></li>
   </ul>
 </header>
@@ -45,43 +45,43 @@
       <div class="carousel owl-carousel">
 
         <div class="card" id="part-1">
-          <h2 class="order">No.1</h2>
+          <h3 class="num">1</h3>
           <h4>Benificiaries</h4>
-          <h5>Individuals entitled to inherit money or property from this will owner.</h5>
-          <button>Start</button>
+          <p>Individuals entitled to inherit money or property from this will owner.</p>
+          <a href="/">Start</a>
         </div>
         <div class="card" id="part-2">
-          <h2 class="order">No.2</h2>
+          <h3 class="checked"><i class="fas fa-check"></i></h3>
           <h4>Executors</h4>
-          <h5>The one to execute your wishes.</h5>
-          <button>Start</button>
+          <p>The one to execute your wishes.</p>
+          <a href="/">Edit</a>
         </div>
         <div class="card" id="part-3">
-          <h2 class="order">No.3</h2>
+          <h3 class="num">3</h3>
           <h4>Asset</h4>
-          <h5>A quick list of your major Assets.</h5>
-          <button>Start</button>
+          <p>A quick list of your major Assets.</p>
+          <a href="/starter/asset">Start</a>
         </div>
         <div class="card" id="part-4">
-          <h2 class="order">No.4</h2>
+          <h3 class="num">4</h3>
           <h4>AssetApportion</h4>
-          <h5>Set up percentages for each benificiary.</h5>
-          <button>Start</button>
+          <p>Set up percentages for each benificiary.</p>
+          <a href="/">Start</a>
         </div>
         <div class="card" id="part-5">
-          <h2 class="order">No.5</h2>
+          <h3 class="num">5</h3>
           <h4>Witness</h4>
-          <h5>Basic info of your nominated Witness</h5>
-          <button>Start</button>
+          <p>Basic info of your nominated Witness</p>
+          <a href="/">Start</a>
         </div>
         <div class="card" id="part-6">
-          <h2 class="order">No.6</h2>
+          <h3 class="num">6</h3>
           <h4>Guardians</h4>
-          <h5>Who should looks after your Benificiaries.</h5>
-          <button>Start</button>
+          <p>Who should looks after your Benificiaries.</p>
+          <a href="/">Start</a>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="/assets/scripts/carousel.js"></script>
+  
