--- a/views/starter.handlebars
+++ b/views/starter.handlebars
@@ -47,7 +47,7 @@
           <h2 class="order">No.3</h2>
           <h4>Asset</h4>
           <h5>A quick list of your major Assets.</h5>
-          <a href="/starter/asset">65454</a>
+          <a href="/starter/asset">start</a>
         </div>
         <div class="card" id="part-4">
           <h2 class="order">No.4</h2>
