--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,8 +14,6 @@
   </ul>
 </header>
 
-
-
 <section class="user">
   <div class="logo">Thy<span>Will</span></div>
   <div class="box-1">
@@ -43,7 +41,6 @@
   <div class="box-2">
     <div class="max-width">
       <div class="carousel owl-carousel">
-
         <div class="card" id="part-1">
           <h3 class="num">1</h3>
           <h4>Benificiaries</h4>
@@ -80,35 +77,37 @@
 
   
   {{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ Witness modal ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
-    <div class="modal fade custom-modal" id="witnessModal" tabindex="-1" role="dialog"
-        aria-labelledby="project-modal-form" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Login or Sign Up<span class="flash" id="validateMessage"></span></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form id="login-form">
-                    <div class="modal-body">
-                      <div class="form-group">
-                          <label for="emailInput">Email:</label>
-                          <input type="email" id="email-login" class="form-control" required />
-                      </div>
-                      <div class="form-group">
-                        <label for="pwInput">Password:</label>
-                        <input type= "password" id="password-login" class="form-control" required />
-                      </div>
-                      </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-light" id="signBtn">Sign Up</button>
-                        <button type="submit" class="btn btn-light" id="loginBtn">Login</button>
-                    </div>
-                </form>
-            </div>
-            
+  <div class="modal fade custom-modal" id="witnessModal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Add Witness<span class="flash" id="validateMessage"></span></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
+        <form id="witness-form">
+          <div class="modal-body">
+            <div class="form-group">
+              <label>Name:</label>
+              <input type="text" id="witnessName" class="form-control" placeholder="First Last" required />
+            </div>
+            <div class="form-group">
+              <label>Relationship:</label>
+              <select class="form-control" id="witnessRelation" required>
+                <option value="Friend">Friend</option>
+                <option value="Relatives">Relatives</option>
+                <option value="Business Partner">Business Partner</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label>Address:</label>
+              <input type="text" id="witnessAddress" class="form-control" placeholder="79 Main Road, Suburb NSW" required />
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-light" id="loginBtn">Save</button>
+            </div>
+          </div>
+        </form>        
+      </div>     
     </div>
-{{!↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑ login modal ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑}}
+  </div> 
+{{!↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑ Witness modal ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑}} 
