--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -27,7 +27,7 @@
       {{/if}}
       <div>
         <p>Will owner:</p>
-        <p>{{first_name}} {{last_name}}</p>
+        <p>{{name}}</p>
       </div>
     </div>
     <p>Email: <a href="mailto:{{email}}">{{email}}</a></p>
@@ -48,40 +48,50 @@
           <h2 class="order">No.1</h2>
           <h4>Benificiaries</h4>
           <h5>Individuals entitled to inherit money or property from this will owner.</h5>
-          <button>Start</button>
+          <button>Add</button>
+          {{#each beneficiaries}}
+          {{> beneficiary-details}}
+          {{/each}}
         </div>
         <div class="card" id="part-2">
           <h2 class="order">No.2</h2>
           <h4>Executors</h4>
           <h5>The one to execute your wishes.</h5>
-          <button>Start</button>
+          <button>Add</button>
+          {{#each executors}}
+          {{> executor-details}}
+          {{/each}}
         </div>
         <div class="card" id="part-3">
           <h2 class="order">No.3</h2>
           <h4>Asset</h4>
           <h5>A quick list of your major Assets.</h5>
-          <button>Start</button>
+          <button>Add</button>
+          {{#each assets}}
+          {{> asset-details}}
+          {{/each}}
         </div>
         <div class="card" id="part-4">
           <h2 class="order">No.4</h2>
           <h4>AssetApportion</h4>
           <h5>Set up percentages for each benificiary.</h5>
-          <button>Start</button>
+          <button>Add</button>
+          {{#each assetApportions}}
+          {{> assetApportion-details}}
+          {{/each}}
         </div>
         <div class="card" id="part-5">
           <h2 class="order">No.5</h2>
           <h4>Witness</h4>
           <h5>Basic info of your nominated Witness</h5>
-          <button>Start</button>
-        </div>
-        <div class="card" id="part-6">
-          <h2 class="order">No.6</h2>
-          <h4>Guardians</h4>
-          <h5>Who should looks after your Benificiaries.</h5>
-          <button>Start</button>
+          <button>Add</button>
+          {{#each witnesses}}
+          {{> witness-details}}
+          {{/each}}
         </div>
       </div>
     </div>
   </div>
 
   <script src="/assets/scripts/carousel.js"></script>
+  <script src="/assets/scripts/profile.js"></script>
