Front End Partial Retouches

--- a/views/partials/asset-details.handlebars
+++ b/views/partials/asset-details.handlebars
@@ -1,3 +1,3 @@
-<button attributes={{{unobjectify this}}}> 
+<button class="w-100" attributes={{{unobjectify this}}}> 
     {{description}}
 </button>
