--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -45,7 +45,7 @@
           <h3 class="num">1</h3>
           <h4>Benificiaries</h4>
           <p>Individuals entitled to inherit money or property from this will owner.</p>
-          <button id="modalBtn" data-toggle="modal" data-target="#beneficiaryModal">A</button>
+          <button id="modalBtn" class="w-100" data-toggle="modal" data-target="#beneficiaryModal">Add</button>
           {{#each beneficiaries}}
           {{> beneficiary-details}}
           {{/each}}
@@ -54,7 +54,7 @@
           <h3 class="checked"><i class="fas fa-check"></i></h3>
           <h4>Executors</h4>
           <p>The one to execute your wishes.</p>
-          <button id="modalBtn" data-toggle="modal" data-target="#executorModal">Add</button>
+          <button id="modalBtn" class="w-100" data-toggle="modal" data-target="#executorModal">Add</button>
           {{#each executors}}
           {{> executor-details}}
           {{/each}}
@@ -64,8 +64,7 @@
           <h3 class="num">3</h3>
           <h4>Asset</h4>
           <p>A quick list of your major Assets.</p>
-          <button id="modalBtn" data-toggle="modal" data-target="#assetModal">Add</button>
-          <button>Add</button>
+          <button id="modalBtn" class="w-100" data-toggle="modal" data-target="#assetModal">Add</button>
           {{#each assets}}
           {{> asset-details}}
           {{/each}}
@@ -75,7 +74,7 @@
           <h3 class="num">4</h3>
           <h4>AssetApportion</h4>
           <p>Set up percentages for each benificiary.</p>
-          <button id="modalBtn" data-toggle="modal" data-target="#apportionModal">Add</button>
+          <button id="modalBtn" class="w-100" data-toggle="modal" data-target="#apportionModal">Add</button>
           {{#each assetApportions}}
           {{> assetApportion-details}}
           {{/each}}
@@ -84,9 +83,8 @@
         <div class="card" id="part-5">
           <h3 class="num">5</h3>
           <h4>Witness</h4>
-
           <p>Basic info of your nominated Witness</p>
-          <button id="modalBtn" data-toggle="modal" data-target="#witnessModal">Add</button>
+          <button id="modalBtn" class="w-100" data-toggle="modal" data-target="#witnessModal">Add</button>
           {{#each witnesses}}
           {{> witness-details}}
           {{/each}}
