--- a/views/partials/beneficiary-details.handlebars
+++ b/views/partials/beneficiary-details.handlebars
@@ -1,3 +1,4 @@
-<button class="w-100" attributes={{{unobjectify this}}}> 
-    {{name}}
+<button class="w-100 updateBtn" data-toggle="modal" data-target="#beneficiaryUpdate" attributes={{{unobjectify this}}}> 
+    <span>{{name}}</span>
+    <i class="fas fa-times"></i>
 </button>
