regular commit second

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -129,7 +129,7 @@
 
             <div class="form-group">
               <label>Address *</label>
-              <input type="text" id="beneficiaryAddress" class="form-control" placeholder="79 Main Road, Suburb NSW" required />
+              <input type="text" id="beneficiaryAddress" class="form-control" placeholder="Example: 79 Main Road, Suburb NSW" required />
             </div>
 
             <div class="modal-footer">
@@ -143,6 +143,7 @@
     </div>
   </div> 
   {{!↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑  Modal Beneficiary Adding ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑}}
+  
   
   {{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓  Modal Beneficiary Updating ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
   <div class="modal fade custom-modal" id="beneficiaryUpdate" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
