Modal Shows Data for Beneficiary

--- a/views/partials/beneficiary-details.handlebars
+++ b/views/partials/beneficiary-details.handlebars
@@ -1,4 +1,4 @@
-<button class="w-100 updateBtn" data-toggle="modal" data-target="#beneficiaryUpdate" attributes={{{unobjectify this}}}> 
-    <span>{{name}}</span>
+<button class="w-100 updateBtn beneficiaryBtn" data-toggle="modal" data-target="#beneficiaryModal" data='{{{unobjectify this}}}'> 
+    <span data='{{{unobjectify this}}}'>{{name}}</span>
     <i class="fas fa-times"></i>
 </button>
