--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -167,11 +167,60 @@
   {{!↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑  Modal Beneficiary Adding ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑}}
 
 
+<div class="modal fade custom-modal" id="executorsModal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
+    <div class="modal-dialog modal-lg"> {{! model header added by jack}}
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title" id="executorsModalTitle">Add Executors</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
+
+        <div class="form-group"> {{! jack added form for  executor ID please check  }}
+              <label>Executor ID</label>
+              <input type="text" id="executorId" class="form-control" enabled = false />
+            </div>
+
+            <div class="form-group"> {{! jack added form for  executor name please check  }}
+              <label>Executor Name</label>
+              <input type="text" id="executorName" class="form-control" enabled = required />
+            </div>
+
+            <div class="form-group"> {{! jack added form for  executor DOB please check  }}
+              <label>Executor DOB</label>
+              <input type="text" id="executorDOB" class="form-control" enabled = required />
+            </div>
+
+            <div class="form-group"> {{! jack added form for  executor DOB please check  }}
+              <label>Executor Relationship</label>
+              <input type="text" id="executorRelationship" class="form-control" enabled = required />
+            </div>
+
+            <div class="form-group"> {{! jack added form for  executor address please check  }}
+              <label>Executor Address</label>
+              <input type="text" id="executorAddress" class="form-control" enabled = required />
+            </div>
+            <div class="form-group"> {{! jack added form for  executor is alternate  please check  }}
+              <label>Executor Alternate</label>
+              <input type="checkbox" id="isAlternate" class="form-control" enabled = required />
+            </div>
+
+
+
+        <div class="modal-footer">
+              <button type="submit" class="btn btn-light" id="executorModal">Save</button>
+            </div>
+
+          </div>
+        </form>  
+
+      </div>     
+    </div>
+  </div> 
 
 
 
 
-  
 
 
 
