--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -107,7 +107,9 @@
         <form id="beneficiary-add">
           <div class="modal-body">
 
-            <div class="form-group"> {{! jack added form group for benificary ID please check  }}
+            <div class="form-group" 
+            {{!-- style="{display:none}" --}}
+            > {{! jack added form group for benificary ID please check  }}
               <label>Beneficiary ID</label>
               <input type="text" id="beneficiaryId" class="form-control" enabled = false />
             </div>
@@ -133,23 +135,23 @@
             </div>
 
             <div class="form-group"> {{! added by jack check this.}}
-              <label>Minor</label>
-              <input type="checkbox" id="isChild" class="form-control" placeholder= required />
+              <input type="checkbox" id="beneficiaryIsChild" class="btn-check" placeholder= required autocomplete="off"/>
+              <label class="btn btn-outline-primary" for="beneficiaryIsChild">Minor</label>
             </div>
 
             <div class="form-group"> {{! added by jack check this.}}
-              <label>Chartiy</label>
-              <input type="checkbox" id="isCharity" class="form-control" placeholder= required />
+              <input type="checkbox" id="beneficiaryIsCharity" class="btn-check" placeholder= required autocomplete="off" />
+              <label class="btn btn-outline-primary" for="beneficiaryIsCharity">Charity</label>
             </div>
 
           <div class="form-group"> {{! added by jack check this.}}
               <label>Guardian Name</label>
-              <input type="text" id="GuardianName" class="form-control">
+              <input type="text" id="beneficiaryGuardianName" class="form-control">
             </div>
 
             <div class="form-group"> {{! added by jack check this.}}
               <label>Guardian Address</label>
-              <input type="text" id="GuardianAddress" class="form-control" placeholder="example: # street name, suburb, state, post-code" />
+              <input type="text" id="beneficiaryGuardianAddress" class="form-control" placeholder="example: # street name, suburb, state, post-code" />
             </div>
 
 
