executor partial changes

--- a/views/partials/executor-details.handlebars
+++ b/views/partials/executor-details.handlebars
@@ -1,3 +1,4 @@
-<button class="w-100" attributes={{{unobjectify this}}}> 
-    {{name}}
+<button class="w-100 updateBtn executorBtn" data-toggle="modal" data-target="#executorModal" data='{{{unobjectify this}}}'> 
+    <span data='{{{unobjectify this}}}'>{{name}}</span>
+    <i class="fas fa-times executorDelete"></i>
 </button>
